# gulps

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  debug.lp  git-conventional-commits.yaml  pyproject.toml  requirements-monodromy.txt
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug.yaml  docs.yaml  feature.yaml
.github/workflows/: ci.yml  publish.yml  release.yml
crates/: Cargo.toml
crates/src/: gate_primitives.rs  lib.rs  lp.rs  recover.rs  solver.rs
docs/: refs.md  solver_knobs_explored.md  todo.md
docs/deprecate/hetero_isas/monodromy_lp/: __init__.py  decomposer.py  singleq_numerics.py
docs/deprecate/hetero_isas/sqrtiswap/: siswap.py  siswap_decomposer.py
docs/deprecate/hetero_isas/zz_parallel_drive/: ansatz.py
docs/deprecate/notebooks/: 00_main.ipynb  temp_dev.ipynb  xy_synthesis.ipynb
docs/deprecate/notebooks/monodromy_lp/: 15_qiskit_comparison.ipynb  16_decomp_gifs.ipynb  18_lp_numerics.ipynb  20_continuous.ipynb
docs/design/: segment_rearrangement.md
docs/mathematica/: sqiswap_vz.nb
docs/profile_timings/: docplex_model1.lp  docplex_model1.mps  docplex_model3.mps  docplex_model4.mps  docplex_model5.mps  model.prof  temp.prof  temp2.prof  temp3.prof  temp4.prof  tempa.prof  tempb.prof  tempc.prof  tempe.prof  tempf.prof  tempg.prof
scripts/: profile_breakdown.py  simple_speed.py  weyl_speed.py  xx_compare.py
scripts/commit_history/: benchmark_task.py  collect_backlog.sh  plot.py  plot_history.py  plot_recent.py
scripts/commit_history/wsl_desktop/: backlog.csv  collection_metadata.json  pruned_log.csv
scripts/temp_diagnostics/: profile_hotspots.py
src/gulps/: __init__.py  config.py  cts_linear_program.py  gulps.py  gulps_decomposer.py  gulps_synthesis.py  invariants.py  linear_program.py  lm_numerics.py  local_numerics.py  numerics_demo.ipynb  synthesis_pass.py  synthesis_plugin.py
src/gulps/_internal/: __init__.py  logging_config.py
src/gulps/comparisons/: bqskit_driver.py  nuop_driver.py
src/gulps/comparisons/isa_library/: __init__.py  benchmark_isas.py  benchmark_xx.py  example_target.py  fsim.py
src/gulps/core/: __init__.py  coordinates.py  coverage.py  invariants.py  isa.py  jax_invariants.py  monodromy_coords.py  segments.py
src/gulps/deprecate/notebooks/: dev_paramter_scaling.ipynb
src/gulps/isa_library/: __init__.py  benchmark_isas.py  defined_isas.py  example_target.py  fsim.py
src/gulps/linear_program/: __init__.py  base.py  cplex_lp.py  cts_linear_program.py  dual_simplex.py  lp_abc.py  lp_solver.py  qlr.py  scipy_lp.py
src/gulps/qiskit_ext/: __init__.py  decomposer_pass.py  synthesis_pass.py  synthesis_plugin.py  translation_plugin.py
src/gulps/synthesis/: __init__.py  gulps_decomposer.py  jax_lm.py  jax_primitives.py  local_numerics.py  recover_equiv.py  segments_abc.py  segments_cache.py  segments_solver.py  segments_specialized.py
src/gulps/utils/: bqskit_utils.py  invariants.py  isa.py  logging_config.py  nuop_utils.py  qlr.py  recover_equiv.py  visualize.py
src/gulps/viz/: __init__.py  invariant_viz.py  legend_helpers.py  polytope_viz.py  report_viz.py  weyl_chamber.py
src/hetero_isas/monodromy_lp/: invariants.py  mono_lp_result.py  singleq_numerics.py
src/hetero_isas/sqrtiswap/: siswap_decomposer.py  utils.py
src/hetero_isas/zz_parallel_drive/: __init__.py  ansatz.py  bgate.py  numerical_decomp.py
src/notebooks/: 00_gulps_profile.ipynb  00_main.ipynb  00_quickstart.ipynb  00_timing_profile.ipynb  01_comparison.ipynb  01_continuous_isa.ipynb  01_decomposition_pipeline.ipynb  01_dev.ipynb  01_numerics_convergence.ipynb  01_plugin.ipynb  02_benchmarks.ipynb  02_fidelity_accumulation.ipynb  02_fsim.ipynb  02_timing_benchmarks.ipynb  02_timing_profile.ipynb  03_continuous.ipynb  03_cplex.ipynb  04_mixed_continuous.ipynb  04_qiskit_plugin.ipynb  05_comparison_benchmarks.ipynb  05_xxdecomposer.ipynb  06_naive.ipynb  _dev2.ipynb  _dev3.ipynb  continuous_isa.ipynb  debug.py  demo_decomposer.ipynb  demo_hitrates.ipynb  demo_lp.ipynb  demo_numerics.ipynb  demo_reflects.ipynb  dev.ipynb  dev_cplex.ipynb  dev_decomposer.ipynb  dev_hitrates.ipynb  dev_main.ipynb  dev_procrustes.ipynb  dev_zzswap.ipynb  lp_demo.ipynb  main.ipynb  (+3 more)
src/notebooks/comparison/: bqskit.ipynb  cts_bqskit.ipynb  nuop.ipynb  nuop_utils.py  qiskit_xx.ipynb
src/notebooks/deprecated/: 00_main.ipynb  01_continuous_isa.ipynb  01_numerics_convergence.ipynb  02_timing_benchmarks.ipynb  04_qiskit_plugin.ipynb  can_dev.ipynb  dev2.ipynb  dev_hitrates.ipynb  traj_gif.ipynb  unitary_completition.ipynb
src/notebooks/dev/: 00_gulps_profile.ipynb  01_comparison.ipynb  01_dev.ipynb  02_fsim.ipynb  03_cplex.ipynb  _dev2.ipynb  _dev3.ipynb  _dev4.ipynb  dev_collect.ipynb  dev_eswap.ipynb  dev_lp.ipynb  dev_main.ipynb  dev_procrustes.ipynb  dev_span.ipynb  dev_sq.ipynb  dev_subgate.ipynb  dev_subgate_executed.ipynb
src/notebooks/monodromy_lp/: 14_mono_lp.ipynb  15_qiskit_comparison.ipynb  16_decomp_gifs.ipynb  17_time_profile.ipynb  18_lp_numerics.ipynb  19_lp_singlecall.ipynb  21_offline_volumes.ipynb  22_param_1q copy.ipynb  23_feasibility_timings.ipynb  24_timings.ipynb  README.md  dev_mono_lp.ipynb
src/notebooks/numeric_decomp/: 09_circuit_ansatz.ipynb  10_num_decomp.ipynb  11_boundary_search.ipynb  README.md  dev_can_gates.ipynb  dev_paramter_scaling.ipynb
src/notebooks/parallel_drive/: 00_interactive_sliders.ipynb  01_random_sampling.ipynb  02_pd_coverage.ipynb  03_bgate_optimizer.ipynb  04_hetero_isa.ipynb  05_bgate_variations.ipynb  06_u2layers.ipynb  07_ux_sequences.ipynb  12_b_like_isa.ipynb  13_ken_pd.ipynb  README.md  dev_fractional_isa.ipynb  dev_zz_pd_coverage.ipynb
src/notebooks/profile_timings/: decomposer_profile.prof  tempg.prof  temph.prof
src/tests/: conftest.py  mondodromy_lp_test.py  test_continuous_isa.py  test_end_to_end.py  test_hard.py  test_lp_agreement.py  test_nonhaar_targets.py  test_numerics.py  test_polytope_agreement.py  test_slow.py  test_swap_edge_cases.py
src/tests/fixtures/: circuits.py  isas.py
(+36 files in other folders)
