[build-system]
requires = ["setuptools", "wheel"]      #, "setuptools_rust"]
build-backend = "setuptools.build_meta"

[project.entry-points."qiskit.unitary_synthesis"]
"gulps" = "gulps:GulpsSynthesisPlugin"

[project]
name = "gulps"
description = "compile arbitrary two-qubit unitaries"
version = "0.0.2"
authors = [{ name = "evm9" }]
requires-python = ">=3.9"
dependencies = [
    "qiskit",
    # wait for this to merge https://github.com/qiskit-community/monodromy/pull/18
    "monodromy @ git+https://github.com/evmckinney9/monodromy.git@fix-setup",
    # avoid pypi because I don't want the numpy<2.0 restriction
    "weylchamber @ git+https://github.com/evmckinney9/weylchamber",
    "qutip",
    "numpy",
    "jaxopt",
]
[project.optional-dependencies]
cplex = ["qiskit-optimization[cplex]"]
dev = [
    "matplotlib",
    "SciencePlots",
    "LovelyPlots",
    "ipykernel",
    "pre-commit",
    "pylatexenc",
    "tqdm",
    "snakeviz",
    "ipywidgets",
]
format = ["pre-commit", "ruff"]
test = ["pytest"]

[tool.ruff]
target-version = "py310"
fix = true
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.isort]
profile = "black"

# [[tool.setuptools-rust.ext-modules]]
# # Private Rust extension module to be nested into the Python package
# # https://github.com/PyO3/setuptools-rust?tab=readme-ov-file
# target = "hetero_isas._accelerate"
# path = "crates/Cargo.toml"
# binding = "PyO3"

[tool.distutils.bdist_wheel]
py_limited_api = "cp39"
