[build-system]
requires = ["setuptools", "wheel"]      #, "setuptools_rust"]
build-backend = "setuptools.build_meta"

[project.entry-points."qiskit.transpiler.translation"]
"gulps" = "gulps:GulpsTranslationPlugin"

[project]
name = "gulps"
description = "compile arbitrary two-qubit unitaries"
version = "0.1.10"
authors = [{ name = "evm9" }]
requires-python = ">=3.9"
dependencies = ["qiskit", "numpy", "jax"]
[project.optional-dependencies]
cplex = ["qiskit-optimization[cplex]"]
monodromy = [
    # wait for this to merge https://github.com/qiskit-community/monodromy/pull/18
    "monodromy @ git+https://github.com/evmckinney9/monodromy.git@fix-setup",
]
dev = [
    "matplotlib",
    "SciencePlots",
    "LovelyPlots",
    "ipykernel",
    "pre-commit",
    "pylatexenc",
    "tqdm",
    "snakeviz",
    "ipywidgets",
    "qutip",
]
format = ["pre-commit", "ruff"]
test = ["pytest"]

[tool.ruff]
target-version = "py312"
fix = true
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["D"]
ignore = ["D105"] # magic methods like __init__ don't need docstrings

[tool.ruff.lint.per-file-ignores]
"scripts/**" = ["D"]
"src/tests/**/*.py" = ["D1"]
"src/gulps/comparisons/**" = ["D"] # third-party driver wrappers
"**/*.ipynb" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

# [[tool.setuptools-rust.ext-modules]]
# # Private Rust extension module to be nested into the Python package
# # https://github.com/PyO3/setuptools-rust?tab=readme-ov-file
# target = "hetero_isas._accelerate"
# path = "crates/Cargo.toml"
# binding = "PyO3"

[tool.distutils.bdist_wheel]
py_limited_api = "cp39"
