[build-system]
requires = ["setuptools", "wheel", "setuptools_rust"]
build-backend = "setuptools.build_meta"

[project.entry-points."qiskit.transpiler.translation"]
"gulps" = "gulps:GulpsTranslationPlugin"

[project]
name = "gulps"
description = "optimally compile arbitrary two-qubit unitaries"
version = "0.3.3"
authors = [{ name = "Evan McKinney", email = "evmckinney9@gmail.com" }]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "quantum",
    "compiler",
    "qiskit",
    "two-qubit",
    "gate-decomposition",
    "quantum-gates",
    "unitary-decomposition",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = ["qiskit>=2.0,<3", "numpy"]

[project.urls]
Homepage = "https://github.com/evmckinney9/gulps"
Repository = "https://github.com/evmckinney9/gulps"
Issues = "https://github.com/evmckinney9/gulps/issues"
[project.optional-dependencies]
cplex = ["qiskit-optimization[cplex]"]
dev = [
    "matplotlib",
    "SciencePlots",
    "LovelyPlots",
    "ipykernel",
    "pre-commit",
    "pylatexenc",
    "tqdm",
    "snakeviz",
    "ipywidgets",
    "qutip",
]
format = ["pre-commit", "ruff"]
test = ["pytest"]

[tool.ruff]
target-version = "py312"
fix = true
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["D"]
ignore = ["D105"] # magic methods like __init__ don't need docstrings

[tool.ruff.lint.per-file-ignores]
"scripts/**" = ["D"]
"src/tests/**/*.py" = ["D1"]
"src/gulps/comparisons/**" = ["D"] # third-party driver wrappers
"**/*.ipynb" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[[tool.setuptools-rust.ext-modules]]
# Private Rust extension module to be nested into the Python package
# https://github.com/PyO3/setuptools-rust?tab=readme-ov-file
target = "gulps._accelerate"
path = "crates/Cargo.toml"
binding = "PyO3"
debug = false

[tool.distutils.bdist_wheel]
py_limited_api = "cp310"
