[package]
name = "gulps_accelerate"
version = "0.3.2"
edition = "2021"

[lib]
name = "_accelerate"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
pyo3 = { version = "=0.27.2", features = ["extension-module", "abi3-py310"] }
numpy = "=0.27.0"
ndarray = "0.16"
num-complex = "0.4"
nalgebra = "0.33"
faer = { version = "0.24", default-features = false, features = ["std"] }
rand = { version = "0.9", features = ["small_rng"] }
rayon = "1.10"

[profile.release]
lto = "thin"
codegen-units = 1
